[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Mohammed Khan <abukhan363@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
setuptools = "^70.0.0"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
